--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,13 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.8.8",
+    "dotenv": "^16.3.1",
     "prisma": "^5.5.1",
     "tsx": "^3.14.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
+    "@fastify/cors": "^8.4.1",
     "@prisma/client": "^5.5.1",
     "fastify": "^4.24.3"
   }
