--- a/rateio-app/package.json
+++ b/rateio-app/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "lucide-react": "^0.290.0",
     "next": "13.5.6",
+    "next-auth": "^4.24.4",
     "react": "^18",
     "react-dom": "^18"
   },
