--- a/rateio-app/package.json
+++ b/rateio-app/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "lucide-react": "^0.290.0",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
