--- a/rateio-app/package.json
+++ b/rateio-app/package.json
@@ -10,6 +10,9 @@
   },
   "dependencies": {
     "axios": "^1.6.0",
+    "firebase": "^10.5.2",
+    "firebase-admin": "^11.11.0",
+    "firebase-functions": "^4.5.0",
     "lucide-react": "^0.290.0",
     "next": "13.5.6",
     "next-auth": "^4.24.4",
