--- a/rateio-app/tsconfig.json
+++ b/rateio-app/tsconfig.json
@@ -32,8 +32,7 @@
     "next-env.d.ts",
     "**/*.ts",
     "**/*.tsx",
-    ".next/types/**/*.ts",
-    "src/components/Spinner.tsx"
+    ".next/types/**/*.ts"
   ],
   "exclude": [
     "node_modules"
