--- a/rateio-app/package.json
+++ b/rateio-app/package.json
@@ -17,7 +17,10 @@
     "next": "13.5.6",
     "next-auth": "^4.24.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "@emotion/styled": "latest",
+    "@emotion/react": "latest",
+    "@mui/material": "latest"
   },
   "devDependencies": {
     "@types/node": "^20",
