--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,8 @@
   "description": "rateio server",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch src/server.ts"
+    "dev": "netlify dev",
+    "build": "tsc && netlify build"
   },
   "author": "Oliveira Renato",
   "license": "ISC",
@@ -17,6 +18,7 @@
   },
   "dependencies": {
     "@fastify/cors": "^8.4.1",
+    "@netlify/functions": "^2.8.0",
     "@prisma/client": "^5.5.1",
     "axios": "^1.6.0",
     "fastify": "^4.24.3",
