--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "netlify dev",
-    "build": "tsc && netlify build"
+    "build": "tsc"
   },
   "author": "Oliveira Renato",
   "license": "ISC",
