--- a/server/package.json
+++ b/server/package.json
@@ -24,6 +24,9 @@
     "fastify": "^4.24.3",
     "fastify-oauth2": "^4.6.0",
     "firebase-admin": "^11.11.0",
+    "netlify-cli": "^17.32.1",
+    "netlify-lambda": "^2.0.16",
+    "serverless-http": "^3.2.0",
     "zod": "^3.22.4"
   }
 }
