--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -1,2 +1,3 @@
 [build]
-  functions = "functions"  # Diretório das funções Netlify
+  functions = "functions"
+  command = "npm run build && npx prisma migrate deploy --preview-feature"
