--- a/server/netlify.toml
+++ b/server/netlify.toml
@@ -1,3 +1,3 @@
 [build]
   functions = "functions"
-  command = "prisma generate"
+  command = "prisma generate && npx prisma migrate deploy --preview-feature"
